--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -12,6 +12,6 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBulmgggpow56r3CqhhH39aQ8MDaagzX64&libraries=visualization&callback=initMap"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBulmgggpow56r3CqhhH39aQ8MDaagzX64&libraries=visualization"></script>
 </body>
 </html>
